--- a/index.html
+++ b/index.html
@@ -2,36 +2,11 @@
 <html>
 <meta charset="utf-8">
 <head>
-    <title>map</title>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <title>start-kit</title>
     <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 </head>
 <body>
-    <!-- <div id="map" style="width: 600px; height: 400px"></div>
-        <script type="text/javascript">
-        ymaps.ready(init);
-        var myMap,
-            myPlacemark;
-
-        function handlerClick() {
-            console.log('123');
-        }
-
-
-        function init() {
-            myMap = new ymaps.Map("map", {
-                center: [55.76, 37.64],
-                zoom: 9,
-                controls: []
-            });
-
-            myPlacemark = new ymaps.Placemark([55.76, 37.64], { hintContent: 'Москва!', balloonContent: 'Столица России</br><img onclick="handlerClick()" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/MTV_Logo.svg/200px-MTV_Logo.svg.png">' });
-
-            myMap.geoObjects.add(myPlacemark);
-        }
-    </script> -->
     <div id="root" class="wrapper"></div>
     <script type="text/javascript" src="../static/bundle.js"></script>
-    
 </body>
 </html>
